<resources>
    <string name="app_name">Move Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="next_alarm">NEXT ALARM</string>
    <string name="hour">HOUR</string>
    <string name="minute">MINUTE</string>
    <string name="second">SECOND</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="howtouse">How to use ?</string>
    <string name="setalarm">Set Alarm</string>
    <string name="title_activity_set_alarm">SetAlarmActivity</string>
    <string name="activate">Activate</string>
    <string name="startofficetime">Start office time</string>
    <string name="endofficetime">End office time</string>
    <string name="setperiod">Set period</string>
    <string name="workingday">Working day</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="style">Style</string>
    <string name="title_activity_working_day">WorkingDayActivity</string>
    <string name="Sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="Wenesday">Wenesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="title_activity_set_period">SetPeriodActivity</string>
    <string name="thirtymin">30 minutes</string>
    <string name="fourtymin">40 minutes</string>
    <string name="fiftymin">50 minutes</string>
    <string name="onehour">1 hour</string>
    <string name="a_hour_and_ten">1 hour 10 minutes</string>
    <string name="a_hour_and_twenty">1 hour 20 minutes</string>
    <string name="a_hour_haft">1 hour 30 minutes</string>
    <string name="two_hours">2 hours</string>
    <string name="title_activity_start_office">StartOfficeActivity</string>
    <string name="title_activity_end_office">EndOfficeActivity</string>
    <string name="stopofficetime">End Office Time</string>
    <string name="title_activity_receiver_instruction">ReceiverInstruction</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="barnameaboutapp">About</string>
    <string name="aboutver">Version : 0.0</string>
    <string name="aboutsize">Size : 3.5 MB</string>
    <string name="aboutdes">An app that alerts user to perform a mini exercise every one hour during office hour in order to prevent office syndrome.</string>
    <string name="title_activity_accept__reject">Accept_Reject</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name">Name :</string>
    <string name="lastname">Lastname :</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="status">Status :</string>
    <string name="score">Score :</string>
    <string name="facebook_app_id">879871255442293</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_friend_profile">FriendProfile</string>
    <string name="firstname">Firstname</string>
    <string name="event">Event</string>
    <string name="title_activity_event">EventActivity</string>
</resources>
