<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about"
    tools:context="com.example.rxusagi.myapplication.AboutActivity">
    <RelativeLayout
        android:background="@color/colorheader"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:id="@+id/header"
            android:textSize="@dimen/headerfont"
            android:text="@string/about"
            android:textColor="@color/colorheadertext"
            android:textStyle="normal">
        </TextView>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            >
            <Button
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="onBackClick"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/back"
                android:background="@mipmap/back_icon">
            </Button>
        </RelativeLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/headBarr"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150px">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignTop="@+id/headBarr"
        android:layout_alignParentEnd="true"
        android:background="@color/colorbgtrans"></LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_launcher"
        android:layout_alignTop="@+id/headBarr"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutver"
        android:id="@+id/textView4"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutsize"
        android:id="@+id/textView5"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutdes"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textColor="#383838"
        android:textSize="17dp" />
</RelativeLayout>
