<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_set_period"
    tools:context="com.example.nu.test4.SetPeriodActivity">
    <RelativeLayout
        android:background="@color/colorheader"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:id="@+id/header"
            android:textSize="@dimen/headerfont"
            android:text="@string/setperiod"
            android:textColor="@color/colorheadertext"
            android:textStyle="normal">
        </TextView>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            >
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            >
            <Button
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="onBackClick"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/back"
                android:background="@mipmap/back_icon">
            </Button>
        </RelativeLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/headBarr"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fillViewport="false">
        <LinearLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:background="#FFFFFF"
                android:onClick="onClick30"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/thirtymin"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>




            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:onClick="onClick40"

                android:background="#FFFFFF"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/fourtymin"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:onClick="onClick50"

                android:background="#FFFFFF"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/fiftymin"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:onClick="onClick100"

                android:background="#FFFFFF"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/onehour"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:background="#FFFFFF"
                android:onClick="onClick110"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/a_hour_and_ten"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:onClick="onClick120"

                android:background="#FFFFFF"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/a_hour_and_twenty"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:onClick="onClick130"

                android:background="#FFFFFF"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/a_hour_haft"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"

                android:onClick="onClick200"
                android:background="#FFFFFF"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/two_hours"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorheader"
                    android:layout_alignParentBottom="true"></LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
