<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_set_alarm"
    tools:context="com.example.rxusagi.myapplication.SetAlarmActivity"
    android:background="@color/colorheader">
    <RelativeLayout
        android:background="@color/colorheader"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:id="@+id/header"
            android:textSize="@dimen/headerfont"
            android:text="@string/setalarm"
            android:textColor="@color/colorheadertext"
            android:textStyle="normal">
        </TextView>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            >
            <Button
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="onSettingClicked"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/setting"
                android:background="@mipmap/setting_button">
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            >
            <Button
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="onBackClick"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/back"
                android:background="@mipmap/back_icon">
            </Button>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbox"
            android:id="@+id/activater"
            android:layout_alignParentTop="true"
            android:background="@color/dimenboxcolor">
            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalfontH"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/activate"/>
            <Switch
                android:backgroundTint="@color/oncolor"
                android:textOn="ON"
                android:textOff="OFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:onClick="onAct"
                android:id="@+id/activateswitch"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/activater"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/lineA">
        </RelativeLayout>
        <RelativeLayout
            android:onClick="onStartOfficeTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbox"
            android:id="@+id/startofficetime"
            android:layout_below="@id/lineA"
            android:background="@color/dimenboxcolor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/normalfontH"
                android:text="@string/startofficetime"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startofficetimetext"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/normalfontH"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/startofficetime"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/lineB">
        </RelativeLayout>
        <RelativeLayout
            android:onClick="onEndOfficeTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbox"
            android:id="@+id/endofficetime"
            android:layout_below="@id/lineB"
            android:background="@color/dimenboxcolor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/normalfontH"
                android:text="@string/endofficetime"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endofficetimetext"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/normalfontH"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/endofficetime"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/lineC">
        </RelativeLayout>
        <RelativeLayout
            android:onClick="onSetPeriod"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbox"
            android:id="@+id/setperiod"
            android:layout_below="@id/lineC"
            android:background="@color/dimenboxcolor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/normalfontH"
                android:text="@string/setperiod"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:id="@+id/hrmn"
                android:textSize="@dimen/normalfontH"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/setperiod"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/lineD">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbox"
            android:id="@+id/workingday"
            android:layout_below="@id/lineD"
            android:background="@color/dimenboxcolor"
            android:onClick="onClickWorking"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workingday"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/normalfontH"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="14dp"
                android:id="@+id/workingdaytext"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/workingday"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/lineF">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbox"
            android:id="@+id/style"
            android:layout_below="@id/lineF"
            android:background="@color/dimenboxcolor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/normalfontH"
                android:id="@+id/st"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/st"
                android:textSize="@dimen/normalfontH"
                android:id="@+id/sketchsprint"
                />
            <Switch
                android:backgroundTint="@color/oncolor"
                android:textOn="ON"
                android:textOff="OFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:id="@+id/styleswitch"
                android:onClick="onSty"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/style"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/lineE">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lineE"
            android:background="@color/dimenboxcolor">

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
